@@ -47,7 +47,7 @@ class ApiLogin extends ApiBase {
 	 */
 	public function execute() {
 		// If we're in JSON callback mode, no tokens can be obtained
-		if ( !is_null( $this->getMain()->getRequest()->getVal( 'callback' ) ) ) {
+		if ( $this->hasCallback() ) {
 			$this->getResult()->addValue( null, 'login', array(
 				'result' => 'Aborted',
 				'reason' => 'Cannot log in when using a callback',
