@@ -76,7 +76,7 @@ class ApiQueryDeletedrevs extends ApiQueryBase {
 		}
 
 		// If we're in JSON callback mode, no tokens can be obtained
-		if ( !is_null( $this->getMain()->getRequest()->getVal( 'callback' ) ) ) {
+		if ( $this->hasCallback() ) {
 			$fld_token = false;
 		}
 
