@@ -57,7 +57,7 @@ class ApiQueryRecentChanges extends ApiQueryGeneratorBase {
 		}
 
 		// If we're in JSON callback mode, no tokens can be obtained
-		if ( !is_null( $this->getMain()->getRequest()->getVal( 'callback' ) ) ) {
+		if ( $this->hasCallback() ) {
 			return array();
 		}
 
