@@ -54,7 +54,7 @@ class ApiQueryRevisions extends ApiQueryRevisionsBase {
 		}
 
 		// If we're in JSON callback mode, no tokens can be obtained
-		if ( !is_null( $this->getMain()->getRequest()->getVal( 'callback' ) ) ) {
+		if ( $this->hasCallback() ) {
 			return array();
 		}
 
