@@ -115,7 +115,7 @@ class ApiQueryUserInfo extends ApiQueryBase {
 			);
 		}
 		if ( isset( $this->prop['preferencestoken'] ) &&
-			is_null( $this->getMain()->getRequest()->getVal( 'callback' ) ) &&
+			!$this->hasCallback() &&
 			$user->isAllowed( 'editmyoptions' )
 		) {
 			$vals['preferencestoken'] = $user->getEditToken( '', $this->getMain()->getRequest() );
