@@ -55,7 +55,7 @@ class ApiTokens extends ApiBase {
 
 	private function getTokenTypes() {
 		// If we're in JSON callback mode, no tokens can be obtained
-		if ( !is_null( $this->getMain()->getRequest()->getVal( 'callback' ) ) ) {
+		if ( $this->hasCallback() ) {
 			return array();
 		}
 
